# mphhc

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  compile_flags.txt  setup.py
benchmark/: phat_mphhc_benchmark.py
include/mphhc/: core.hpp
python/: mphhc_module.cpp
python-tests/: test_mphhc.py
src/: CMakeLists.txt  core.cpp  main.cpp
tests/: CMakeLists.txt  core_test.cpp
